--- a/pet/src/main/res/layout/fragment_mine.xml
+++ b/pet/src/main/res/layout/fragment_mine.xml
@@ -59,13 +59,294 @@
                 android:id="@+id/llContent"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginHorizontal="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="20dp"
-                android:background="@drawable/shape_mine_bg"
-                android:elevation="5dp"
+                android:paddingBottom="20dp"
                 android:orientation="vertical">
 
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/shape_mine_bg"
+                    android:elevation="5dp"
+                    android:layout_marginHorizontal="10dp"
+                    android:padding="12dp"
+                    android:layout_marginTop="10dp">
+
+                    <com.google.android.material.imageview.ShapeableImageView
+                        android:id="@+id/mPetAvatar"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:strokeWidth="1dp"
+                        android:padding="1dp"
+                        app:strokeColor="@color/color_app"
+                        app:shapeAppearance="@style/circleImageStyle"
+                        app:srcCompat="@mipmap/cat"/>
+
+                    <TextView
+                        android:id="@+id/mPetName"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintTop_toTopOf="@id/mPetAvatar"
+                        app:layout_constraintStart_toEndOf="@id/mPetAvatar"
+                        android:textSize="16sp"
+                        android:layout_marginLeft="8dp"
+                        android:textStyle="bold"
+                        android:includeFontPadding="false"
+                        android:textColor="@color/color_2C2C2C"
+                        android:text="豆腐"/>
+
+                    <ImageView
+                        android:id="@+id/mPetSex"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@mipmap/icon_sex_boy"
+                        app:layout_constraintEnd_toEndOf="@id/mPetAvatar"
+                        app:layout_constraintBottom_toBottomOf="@id/mPetAvatar"/>
+
+                    <TextView
+                        android:id="@+id/mPetBrand"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="10sp"
+                        android:textColor="@color/color_2C2C2C"
+                        android:layout_marginLeft="8dp"
+                        android:includeFontPadding="false"
+                        app:layout_constraintBottom_toBottomOf="@id/mPetName"
+                        app:layout_constraintStart_toEndOf="@id/mPetName"
+                        android:text="橘猫"
+                        />
+
+                    <com.google.android.material.textview.MaterialTextView
+                        android:id="@+id/mPetTime"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="一个月"
+                        android:textSize="8sp"
+                        android:paddingHorizontal="4dp"
+                        android:paddingVertical="1dp"
+                        android:textAppearance="@style/textStyle"
+                        android:textColor="@color/white"
+                        android:background="@color/color_app_20"
+                        app:layout_constraintBottom_toBottomOf="@id/mPetAvatar"
+                        app:layout_constraintStart_toStartOf="@id/mPetName"/>
+
+                    <TextView
+                        android:id="@+id/mPetTimeWith"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:maxLines="1"
+                        android:text="已与你相伴365天~"
+                        app:layout_constraintBottom_toBottomOf="@id/mPetTime"
+                        app:layout_constraintStart_toEndOf="@id/mPetTime"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:layout_marginLeft="6dp"
+                        android:textSize="10sp"
+                        android:textColor="@color/color_2C2C2C" />
+
+                    <View
+                        android:id="@+id/line"
+                        android:layout_width="match_parent"
+                        android:layout_height="0.5dp"
+                        android:background="@color/color_ddd"
+                        app:layout_constraintTop_toBottomOf="@id/mPetAvatar"
+                        android:layout_marginTop="12dp"/>
+
+                    <TextView
+                        android:id="@+id/mPetNotice"
+                        android:layout_width="0dp"
+                        android:textSize="14sp"
+                        android:textColor="@color/color_2C2C2C"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintTop_toBottomOf="@id/line"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:layout_marginTop="12dp"
+                        android:drawablePadding="4dp"
+                        android:drawableLeft="@mipmap/icon_mine_pet_notice"
+                        android:text="近期提醒"/>
+
+                    <TextView
+                        android:id="@+id/mPetNoticeContent"
+                        android:layout_width="0dp"
+                        android:textSize="12sp"
+                        android:textColor="@color/black"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="12dp"
+                        app:layout_constraintBottom_toBottomOf="@id/mPetNotice"
+                        app:layout_constraintStart_toEndOf="@id/mPetNotice"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:text="需要驱虫"/>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/shape_mine_bg"
+                    android:layout_margin="10dp"
+                    android:orientation="horizontal"
+                    android:elevation="5dp">
+                    <androidx.appcompat.widget.LinearLayoutCompat
+                        android:layout_weight="1"
+                        android:layout_width="0dp"
+                        android:orientation="vertical"
+                        android:gravity="center_horizontal"
+                        android:layout_height="wrap_content"
+                        android:paddingVertical="12dp">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="0"
+                            android:textSize="18sp"
+                            android:textStyle="bold"
+                            android:textColor="@color/color_2C2C2C"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="关注"
+                            android:textColor="@color/black"
+                            android:textSize="12sp"/>
+                    </androidx.appcompat.widget.LinearLayoutCompat>
+                    <View
+                        android:layout_width="1dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginVertical="10dp"
+                        android:background="@drawable/shape_divider_linear_mine"/>
+                    <androidx.appcompat.widget.LinearLayoutCompat
+                        android:layout_weight="1"
+                        android:layout_width="0dp"
+                        android:orientation="vertical"
+                        android:gravity="center_horizontal"
+                        android:layout_height="wrap_content"
+                        android:paddingVertical="12dp">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="0"
+                            android:textSize="18sp"
+                            android:textStyle="bold"
+                            android:textColor="@color/color_2C2C2C"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="收藏"
+                            android:textColor="@color/black"
+                            android:textSize="12sp"/>
+                    </androidx.appcompat.widget.LinearLayoutCompat>
+                    <View
+                        android:layout_width="1dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginVertical="10dp"
+                        android:background="@drawable/shape_divider_linear_mine"/>
+                    <androidx.appcompat.widget.LinearLayoutCompat
+                        android:layout_weight="1"
+                        android:layout_width="0dp"
+                        android:orientation="vertical"
+                        android:gravity="center_horizontal"
+                        android:layout_height="wrap_content"
+                        android:paddingVertical="12dp">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="0"
+                            android:textSize="18sp"
+                            android:textStyle="bold"
+                            android:textColor="@color/color_2C2C2C"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="宠物"
+                            android:textColor="@color/black"
+                            android:textSize="12sp"/>
+                    </androidx.appcompat.widget.LinearLayoutCompat>
+                    <View
+                        android:layout_width="1dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginVertical="10dp"
+                        android:background="@drawable/shape_divider_linear_mine"/>
+                    <androidx.appcompat.widget.LinearLayoutCompat
+                        android:layout_weight="1"
+                        android:layout_width="0dp"
+                        android:orientation="vertical"
+                        android:gravity="center_horizontal"
+                        android:layout_height="wrap_content"
+                        android:paddingVertical="12dp">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="0"
+                            android:textSize="18sp"
+                            android:textStyle="bold"
+                            android:textColor="@color/color_2C2C2C"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="文章"
+                            android:textColor="@color/black"
+                            android:textSize="12sp"/>
+                    </androidx.appcompat.widget.LinearLayoutCompat>
+                </androidx.appcompat.widget.LinearLayoutCompat>
+
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/shape_mine_bg"
+                    android:elevation="5dp"
+                    android:orientation="vertical"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginHorizontal="10dp">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="意见反馈"
+                        android:textSize="14sp"
+                        android:textColor="@color/color_2C2C2C"
+                        android:padding="12dp"
+                        android:drawableRight="@mipmap/icon_into_aeaeae"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="分享App"
+                        android:textSize="14sp"
+                        android:textColor="@color/color_2C2C2C"
+                        android:padding="12dp"
+                        android:drawableRight="@mipmap/icon_into_aeaeae"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="检查更新"
+                        android:textSize="14sp"
+                        android:textColor="@color/color_2C2C2C"
+                        android:padding="12dp"
+                        android:drawableRight="@mipmap/icon_into_aeaeae"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="联系QQ 客服"
+                        android:textSize="14sp"
+                        android:textColor="@color/color_2C2C2C"
+                        android:padding="12dp"
+                        android:drawableRight="@mipmap/icon_into_aeaeae"/>
+
+                </androidx.appcompat.widget.LinearLayoutCompat>
+
+                <TextView
+                    android:id="@+id/mineOut"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="退出登录"
+                    android:textSize="16sp"
+                    android:textColor="@color/color_white"
+                    android:padding="12dp"
+                    android:elevation="5dp"
+                    android:gravity="center"
+                    android:layout_marginTop="50dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginHorizontal="10dp"/>
             </androidx.appcompat.widget.LinearLayoutCompat>
         </androidx.core.widget.NestedScrollView>
 
