--- a/pet/src/main/res/values/style.xml
+++ b/pet/src/main/res/values/style.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="ToolbarTextAppearance" >
-        <item name="android:textSize">16sp</item>
-        <item name="titleTextColor">@color/white</item>
+    <style name="textStyle">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerRadius">10dp</item>
     </style>
 </resources>
