首页添加轮播图

--- a/pet/src/main/res/values/colors.xml
+++ b/pet/src/main/res/values/colors.xml
@@ -22,4 +22,7 @@
     <color name="color_app_80">#CCFF7A0F</color>
     <color name="color_app_90">#E5FF7A0F</color>
 
+
+    <color name="color_c0c0c8">#c0c0c8</color>
+    <color name="color_A0A0B8">#A0A0B8</color>
 </resources>
