--- a/pet/src/main/res/layout/fragment_home.xml
+++ b/pet/src/main/res/layout/fragment_home.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
@@ -8,17 +9,72 @@
             type="com.mh55.lovepet.http.vm.HomeViewModel" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fillViewport="true"
+        android:background="@color/app_system_color"
         tools:context=".home.HomeFragment">
 
-        <TextView
+        <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="首页"
-            android:textColor="@color/white"
-            android:gravity="center"/>
+            android:orientation="vertical">
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/homeTopBg"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingBottom="100dp">
+
+                <com.mh55.easymvvm.widget.title.StatusBarView
+                    android:id="@+id/mStatusBarView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toTopOf="parent"/>
+
+                <TextView
+                    android:id="@+id/mHomeAddress"
+                    android:layout_width="wrap_content"
+                    android:layout_height="?attr/actionBarSize"
+                    android:text="贵阳"
+                    android:drawablePadding="4dp"
+                    android:paddingLeft="12dp"
+                    android:textSize="14sp"
+                    android:gravity="center_vertical"
+                    android:textColor="@color/color_2C2C2C"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/mStatusBarView"
+                    android:drawableRight="@mipmap/icon_home_address_change"/>
+
+                <TextView
+                    android:id="@+id/mHomeSearch"
+                    android:layout_width="0dp"
+                    android:layout_height="30dp"
+                    app:layout_constraintStart_toEndOf="@id/mHomeAddress"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:paddingHorizontal="10dp"
+                    android:layout_marginHorizontal="12dp"
+                    android:text="热门宠物"
+                    android:textColor="@color/white"
+                    android:gravity="center_vertical"
+                    android:textSize="14sp"
+                    android:drawablePadding="12dp"
+                    app:layout_constraintTop_toTopOf="@id/mHomeAddress"
+                    app:layout_constraintBottom_toBottomOf="@id/mHomeAddress"
+                    android:drawableLeft="@mipmap/icon_home_top_search"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <com.youth.banner.Banner
+                android:id="@+id/mBanner"
+                android:layout_width="match_parent"
+                android:layout_height="120dp"
+                android:layout_marginTop="-80dp"
+                app:banner_auto_loop="true"
+                android:layout_marginHorizontal="12dp"/>
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+    </androidx.core.widget.NestedScrollView>
 </layout>
