--- a/pet/src/main/res/layout/fragment_home.xml
+++ b/pet/src/main/res/layout/fragment_home.xml
@@ -9,93 +9,104 @@
             type="com.mh55.lovepet.http.vm.HomeViewModel" />
     </data>
 
-    <androidx.core.widget.NestedScrollView
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fillViewport="true"
-        android:background="@color/app_system_color"
-        tools:context=".home.HomeFragment">
-
-        <androidx.appcompat.widget.LinearLayoutCompat
+        android:layout_height="match_parent">
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/homeTopBg"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingBottom="100dp">
-
-                <com.mh55.easymvvm.widget.title.StatusBarView
-                    android:id="@+id/mStatusBarView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintTop_toTopOf="parent"/>
-
-                <TextView
-                    android:id="@+id/mHomeAddress"
-                    android:layout_width="wrap_content"
-                    android:layout_height="?attr/actionBarSize"
-                    android:text="贵阳"
-                    android:drawablePadding="4dp"
-                    android:paddingLeft="12dp"
-                    android:textSize="14sp"
-                    android:gravity="center_vertical"
-                    android:textColor="@color/color_2C2C2C"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/mStatusBarView"
-                    android:drawableRight="@mipmap/icon_home_address_change"/>
-
-                <TextView
-                    android:id="@+id/mHomeSearch"
-                    android:layout_width="0dp"
-                    android:layout_height="30dp"
-                    app:layout_constraintStart_toEndOf="@id/mHomeAddress"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:paddingHorizontal="10dp"
-                    android:layout_marginHorizontal="12dp"
-                    android:text="热门宠物"
-                    android:textColor="@color/white"
-                    android:gravity="center_vertical"
-                    android:textSize="14sp"
-                    android:drawablePadding="12dp"
-                    app:layout_constraintTop_toTopOf="@id/mHomeAddress"
-                    app:layout_constraintBottom_toBottomOf="@id/mHomeAddress"
-                    android:drawableLeft="@mipmap/icon_home_top_search"/>
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <com.youth.banner.Banner
-                android:id="@+id/mBanner"
-                android:layout_width="match_parent"
-                android:layout_height="120dp"
-                android:layout_marginTop="-80dp"
-                app:banner_auto_loop="true"
-                android:layout_marginHorizontal="12dp"/>
+            android:fillViewport="true"
+            android:background="@color/app_system_color"
+            tools:context=".home.HomeFragment">
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/shape_mine_bg"
-                android:layout_margin="12dp"
-                android:orientation="horizontal">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-                <TextView
-                    android:layout_weight="1"
-                    android:layout_width="0dp"
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/homeTopBg"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="救助"
-                    android:gravity="center"/>
-                <TextView
-                    android:layout_weight="1"
-                    android:layout_width="0dp"
+                    android:orientation="vertical"
+                    android:paddingBottom="100dp">
+
+                    <com.mh55.easymvvm.widget.title.StatusBarView
+                        android:id="@+id/mStatusBarView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintTop_toTopOf="parent"/>
+
+                    <TextView
+                        android:id="@+id/mHomeAddress"
+                        android:layout_width="wrap_content"
+                        android:layout_height="?attr/actionBarSize"
+                        android:text="贵阳"
+                        android:drawablePadding="4dp"
+                        android:paddingLeft="12dp"
+                        android:textSize="14sp"
+                        android:gravity="center_vertical"
+                        android:textColor="@color/color_2C2C2C"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/mStatusBarView"
+                        android:drawableRight="@mipmap/icon_home_address_change"/>
+
+                    <TextView
+                        android:id="@+id/mHomeSearch"
+                        android:layout_width="0dp"
+                        android:layout_height="30dp"
+                        app:layout_constraintStart_toEndOf="@id/mHomeAddress"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:paddingHorizontal="10dp"
+                        android:layout_marginHorizontal="12dp"
+                        android:text="热门宠物"
+                        android:textColor="@color/white"
+                        android:gravity="center_vertical"
+                        android:textSize="14sp"
+                        android:drawablePadding="12dp"
+                        app:layout_constraintTop_toTopOf="@id/mHomeAddress"
+                        app:layout_constraintBottom_toBottomOf="@id/mHomeAddress"
+                        android:drawableLeft="@mipmap/icon_home_top_search"/>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <com.youth.banner.Banner
+                    android:id="@+id/mBanner"
+                    android:layout_width="match_parent"
+                    android:layout_height="120dp"
+                    android:layout_marginTop="-80dp"
+                    app:banner_auto_loop="true"
+                    android:layout_marginHorizontal="12dp"/>
+
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="领养"/>
+                    android:background="@drawable/shape_mine_bg"
+                    android:layout_margin="12dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_weight="1"
+                        android:layout_width="0dp"
+                        android:layout_height="50dp"
+                        android:text="救助"
+                        android:gravity="center"/>
+                    <TextView
+                        android:layout_weight="1"
+                        android:layout_width="0dp"
+                        android:layout_height="50dp"
+                        android:gravity="center"
+                        android:text="领养"/>
+                </androidx.appcompat.widget.LinearLayoutCompat>
+
             </androidx.appcompat.widget.LinearLayoutCompat>
+        </androidx.core.widget.NestedScrollView>
+        <View
+            android:id="@+id/loadingView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"/>
+    </FrameLayout>
 
-        </androidx.appcompat.widget.LinearLayoutCompat>
-    </androidx.core.widget.NestedScrollView>
+
 </layout>
